Get the compile-aosp target compiling with Java 10